[gd_scene load_steps=9 format=3 uid="uid://chwret6cxw4io"]

[ext_resource type="Script" path="res://Scripts/goomba.gd" id="1_q5hnp"]
[ext_resource type="Texture2D" uid="uid://dwkj4hwpqhsw1" path="res://Assets/Enemies/GoombaTileMap.png" id="2_bhn66"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q6nol"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ffvhf"]
size = Vector2(18, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e7x0k"]
size = Vector2(19, 13)

[sub_resource type="Animation" id="Animation_k88ko"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_u4hw0"]
resource_name = "Walk"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [0, 1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oav7a"]
_data = {
"RESET": SubResource("Animation_k88ko"),
"Walk": SubResource("Animation_u4hw0")
}

[node name="Goomba" type="CharacterBody2D"]
collision_layer = 8
script = ExtResource("1_q5hnp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_bhn66")
hframes = 3
vframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_q6nol")

[node name="Die" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Die"]
modulate = Color(0.1155, 0.99, 0, 1)
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_ffvhf")

[node name="Attack" type="Area2D" parent="."]
position = Vector2(0, 0.5)
collision_layer = 8
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
modulate = Color(1, 0, 0.0166664, 1)
position = Vector2(0, 1)
shape = SubResource("RectangleShape2D_e7x0k")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oav7a")
}
speed_scale = 2.0

[node name="Seen" type="VisibleOnScreenNotifier2D" parent="."]
position = Vector2(4.17233e-07, 7.15256e-07)
scale = Vector2(0.8, 0.8)

[node name="OneTile" type="RayCast2D" parent="."]
target_position = Vector2(-8, 16)

[node name="TwoTile" type="RayCast2D" parent="."]
target_position = Vector2(-8, 32)

[connection signal="body_entered" from="Die" to="." method="_on_die_body_entered"]
[connection signal="body_entered" from="Attack" to="." method="_on_attack_body_entered"]
